--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "gatsby": "^5.11.0",
     "gatsby-plugin-sass": "^6.11.0",
     "node-sass": "^8.0.0",
