--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@splidejs/splide": "^4.1.4",
     "gatsby": "^5.11.0",
     "gatsby-plugin-sass": "^6.11.0",
     "node-sass": "^8.0.0",
