--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@splidejs/splide": "^4.1.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "gatsby": "^5.11.0",
     "gatsby-plugin-sass": "^6.11.0",
     "node-sass": "^8.0.0",
+    "nodemailer": "^6.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
